# mlir-extensions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.ubuntu_latest  I-GPU-RFC.md  LICENSE  LICENSES_bundled.txt  MANIFEST.in  README.md  __init__.py  apaws.yml  azure-pipelines.yml  build_command.sh  build_sycl_command.sh  builtin_funcs.py  func_registry.py  inner_compiler.py  level-zero-sha.txt  linalg_builder.py  llvm-sha.txt  numpy_funcs.py  readme.md  set_env.sh  settings.py  setup.py  test.py  test_addf_sycl.sh  test_command_sycl.sh  third-party-programs.txt
benchmarks/: CMakeLists.txt  bench_imex.in
benchmarks/kInputFusion/: CMakeLists.txt  kInputFusion.mlir.in
benchmarks/kLoopFusion/: CMakeLists.txt  kLoopFusion.mlir.in
benchmarks/pipelines/: linalg-to-cpu.pp  linalg-to-gpu.pp
benchmarks/reduce/: CMakeLists.txt  reduce.dtypes.in  reduce_cpu.mlir.in  reduce_gpu.mlir.in
benchmarks/relu/: CMakeLists.txt  relu.mlir.in  relu.shapes.in  relu_cpu.mlir.in  relu_gpu.mlir.in
benchmarks/silu/: CMakeLists.txt  silu.dtypes.in  silu.shapes.in  silu_cpu.mlir.in  silu_gpu.mlir.in
benchmarks/softmax/: CMakeLists.txt  softmax.shapes.in  softmax_cpu.mlir.in  softmax_gpu.mlir.in
benchmarks/spirv/: perf_report.txt  relu.tile.seq1.simd16.spirv.block.mlir  relu.tile.seq2.simd16.scf.mlir  relu.tile.seq2.simd16.spirv.mlir  relu.tile.seq2.simd32.scf.mlir  relu.tile.seq2.simd32.spirv.mlir  relu.tile.seq4.simd16.scf.mlir  relu.tile.seq4.simd16.spirv.mlir  relu.tile.seq4.simd32.scf.mlir  relu.tile.seq4.simd32.spirv.mlir  relu_512x640x20x15_f32.mlir  spirv-to-llvm.pp
benchmarks/transpose/: CMakeLists.txt  transpose.shapes.in  transpose2d.mlir.in  transpose2d_cpu.mlir.in  transpose3d_cpu.mlir.in  transpose3d_gpu.mlir.in
cmake/modules/: CMakeLists.txt  FindLevelZero.cmake  FindSyclRuntime.cmake  IMEXConfig.cmake.in  sanitizers.cmake  update_level_zero.cmake  update_mlir.cmake
docs/: CMakeLists.txt  Doxyfile.in  Passes.md  doxygen-mainpage.dox
docs/Conversion/: GPUToSPIRV.md
docs/Tools/: ImexRunner.md
docs/Transforms/: BF16ToGpu.md  InsertGpuAllocs.md  SerializeSPIRV.md  SetSPIRVAbiAttribute.md  SetSPIRVCapabilities.md  SetSpirvAbiAttribute.md  SetSpirvCapabilities.md  UnstrideMemrefPass.md  UnstrideMemrefs.md
docs/rfcs/: DistDialect.md  DistRuntimeDialect.md  GPUXDialect.md  NDArrayDialect.md  PipelineComposition.md  RegionDialect.md  XeGPU.md  XeTile.md  XeTileandXeGPUDialect.md  spirvX.md  template.md
docs/runtime/: GPURuntime.md  SyclRuntime.md
dpcomp/: CMakeLists.txt
dpcomp/lib/: dialect.cpp  utils.cpp
dpcomp/src/: dialect.cpp  utils.cpp
dpcomp_gpu_runtime/: CMakeLists.txt
dpcomp_gpu_runtime/lib/: FilterStringParser.cpp  FilterStringParser.hpp  GpuRuntime.cpp  LevelZeroPrinting.hpp  LevelZeroWrapper.hpp  gpu_runtime.cpp  kernel_api_stubs.cpp  sycl_runtime.cpp
dpcomp_gpu_runtime/src/: gpu_runtime.cpp  kernel_api_stubs.cpp  level_zero_printing.hpp  level_zero_wrapper.hpp
dpcomp_math_runtime/: CMakeLists.txt
dpcomp_math_runtime/lib/: common.cpp  common.hpp  numpy_linalg.cpp
dpcomp_math_runtime/src/: common.cpp  common.hpp  numpy_linalg.cpp
dpcomp_runtime/: CMakeLists.txt
dpcomp_runtime/lib/: Context.cpp  Memory.cpp  TbbParallel.cpp  context.cpp  memory.cpp  tbb_parallel.cpp
dpcomp_runtime/src/: memory.cpp  tbb_parallel.cpp
integration/example/: CMakeLists.txt  README.md  sample-opt.cpp
lib/CAPI/: CMakeLists.txt  Dialects.cpp  Passes.cpp
lib/Conversion/: CMakeLists.txt  IMEXPassDetail.h  PassDetail.h
lib/ExecutionEngine/: CMakeLists.txt  ImexRunnerUtils.cpp
mlir/: CMakeLists.txt
mlir/lib/: Utils.cpp  utils.cpp
mlir/test/: CMakeLists.txt  CmakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/tools/: CMakeLists.txt
numpy/: funcs.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  runlit.py
test/Conversion/: lit.local.cfg
test/Debug/: fsw-12463-bcast-elem.mlir  fsw-13367-opt.mlir  fsw-13367-xegpu.mlir  i944.mlir  log.mlir  run_xetile.sh  xetile-to-func-vc.pp
test/Models/: lit.local.cfg
test/PlaidML/: CppEdsl.Add.mlir  CppEdsl.Atan.mlir  CppEdsl.BigDot.mlir  CppEdsl.BitAnd.mlir  CppEdsl.BitAndScalar.mlir  CppEdsl.BitLeft.mlir  CppEdsl.BitNot.mlir  CppEdsl.BitOr.mlir  CppEdsl.BitRightScalar.mlir  CppEdsl.BitRightTensor.mlir  CppEdsl.BitXor.mlir  CppEdsl.BroadcastCmp.mlir  CppEdsl.Cast.mlir  CppEdsl.ConstAdd.mlir  CppEdsl.ConvI8.mlir  CppEdsl.Convolution.mlir  CppEdsl.Convolution_BF16.mlir  CppEdsl.Cos.mlir  CppEdsl.CumSum.mlir  CppEdsl.DefractLong.mlir  CppEdsl.Dot.mlir  CppEdsl.DotF16.mlir  CppEdsl.DotF16_AccF32.mlir  CppEdsl.DoubleDot.mlir  CppEdsl.DupOut.mlir  CppEdsl.EltwiseAdd.mlir  CppEdsl.EltwiseMod.mlir  CppEdsl.Erf.mlir  ExampleCppEdsl.Conv1D.mlir  ExampleCppEdsl.GEMV_FLOAT32.mlir  ExampleCppEdsl.Quantize.mlir  OpTest.Abs.mlir  OpTest.Argmax.mlir  OpTest.BinaryCrossentropy.mlir  OpTest.BroadcastNonNumpy.mlir  OpTest.BroadcastNonNumpy_BF16.mlir  OpTest.ComplexConv2D.mlir  OpTest.Conv1D.mlir  OpTest.Conv2DDilated.mlir  OpTest.Dot.mlir  (+66 more)
test/SPIRV/: CppEdsl.Convolution_BF16.mlir  OpTest.ArgMax_BF16.mlir  OpTest.Argmax_FLOAT32.mlir  OpTest.BroadcastNonNumpy_BF16.mlir  OpTest.BroadcastNonNumpy_FLOAT32.mlir  OpTest.Conv2D_FLOAT32.mlir  OpTest.EltwiseAdd_BF16.mlir  OpTest.EltwiseAdd_FLOAT32.mlir  OpTest.EltwiseAdd_FLOAT32_explicit_memory_copy.mlir  OpTest.ExplicitPadding_FLOAT32.mlir  OpTest.GEMM_BF16.mlir  OpTest.GEMM_BF16_ACC_F32.mlir  OpTest.GEMM_F16_ACC_F32.mlir  OpTest.MaxPool1D_INT64.mlir  OpTest.Quantize_FLOAT32.mlir  OpTest.Relu_FLOAT32.mlir  OpTest.SlmDynamic.mlir  OpTest.Softmax_FLOAT32.mlir  OpTest.Sum_FLOAT32.mlir  OpTest.Transpose_FLOAT32.mlir  OpTest.spirv.CL.printf.mlir  lit.local.cfg  relu.slm.static.8x32.mlir  spirv-to-llvm.pp
test/Transforms/: add-outer-parallel-loop.mlir  cast-index.mlir  insert-gpu-copy.mlir  lit.local.cfg  lower-memref-copy.mlir  memref_alloc_to_gpu_alloc.mlir  propagate-packed-layout.mlir  remove-temporaries.mlir  serialize-spirv.mlir  set-spirv-abi-attr.mlir  set-spirv-capability.mlir  set_spirv_abi_attr.mlir  set_spirv_capability.mlir  tile-loops.mlir  (+3 more)
(+1907 files in other folders)
